# Big-Sur-StatusArea

./: README.md  convenience.js  export-zip.sh  extension.js  menuItems.js  meson.build  metadata.json  prefs.js  stylesheet.css
icons/: meson.build
indicators/: bluetooth.js  button.js  calendar.js  light.js  meson.build  network.js  nightlight.js  notification.js  power.js  system.js  volume.js
locale/: LINGUAS  bigSur-StatusArea.pot  de.po  es.po  fr.po  it.po  meson.build  pl.po  pt_BR.po  pt_PT.po  ru.po  sv.po
schemas/: gschemas.compiled  meson.build  org.gnome.shell.extensions.bigsur-statusarea.gschema.xml  org.gnome.shell.extensions.panel-indicators.gschema.xml
