install_data([
  'logo.svg',
  'notification-new-symbolic.svg',
  'notifications-symbolic.svg',
  'orientation-lock-symbolic.svg',
  'switch-user-symbolic.svg',
  'system-shutdown-symbolic.svg',
  'bluetooth-active-symbolic.svg',
  'bluetooth-disabled-symbolic.svg',
  'bluetooth-paired-symbolic.svg'
  ],
  install_dir : icons_dir
)

